--- a/customers/customers.css
+++ b/customers/customers.css
@@ -6,11 +6,10 @@ main {
   font-size: 1.2rem;
 }
 
-/* .testimonial__list {
+/*.testimonial__list {
     width: 80%;
     margin: auto;
-  } */
-
+  }*/
 
 .testimonial__image-container {
   width: 100%;
@@ -60,22 +59,21 @@ main {
 
 .testimonial__text {
   margin: 0.2rem;
-  white-space: pre-line;
 }
 
 @media (min-width: 40rem) {
   .testimonial {
     margin: 3rem auto;
     max-width: 1500px;
+    display: flex;
+    justify-content: space-around;
   }
+
   .testimonial__image-container {
-    display: inline-block;
-    vertical-align: middle;
     width: 66%;
   }
+
   .testimonial__info {
-    display: inline-block;
-    vertical-align: middle;
     width: 30%;
   }
 }
