--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 #product-overview {
   background: linear-gradient(to top, rgba(80, 68, 18, 0.6) 10%, transparent),
-    url('images/freedom.jpg') center / cover no-repeat border-box, #ff1b68;
+    url('images/freedom.jpg') center/cover no-repeat border-box, #ff1b68;
   /* background-image: url("freedom.jpg");
     background-size: cover;
     background-position: left 10% bottom 20%; */
@@ -9,8 +9,8 @@
     background-clip: border-box; */
   /* background-image: linear-gradient(180deg, red 70%, blue 60%, rgba(0,0,0,0.5)); */
   /* background-image: radial-gradient(ellipse farthest-corner at 20% 50%, red, blue 70%, green); */
-  width: 100%;
-  height: 50vh;
+  width: 100vw;
+  height: 33vh;
   /* border: 5px dashed red; */
   position: relative;
 }
@@ -26,6 +26,7 @@
 
 @media (min-width: 40rem) and (min-height: 40rem) {
   #product-overview {
+    height: 40vh;
     background-position: 50% 25%;
   }
 
@@ -50,7 +51,6 @@
 .plan--highlighted {
   background: #19b84c;
   color: white;
-  /* box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5); */
 }
 
 .plan__annotation {
@@ -88,20 +88,30 @@
 }
 
 @media (min-width: 40rem) {
+  /*assignment => flex container*/
   .plan__list {
     width: 100%;
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
+  /*assignment => flex container*/
   .plan {
-    display: inline-block;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     width: 30%;
-    vertical-align: middle;
     min-width: 13rem;
     max-width: 25rem;
+    height: 28rem;
   }
+
+  /*assignment => z-index & height*/
   .plan--highlighted {
     box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
+    height: 30rem;
+    z-index: 0;
   }
 }
 
@@ -120,6 +130,7 @@
   list-style: none;
   margin: 0;
   padding: 0;
+  text-align: center;
 }
 
 .key-feature__image {
@@ -140,14 +151,16 @@
 }
 
 @media (min-width: 40rem) {
-  .key-feature__list {
-    text-align: center;
-  }
+  /*assignment*/
   .key-feature {
-    display: inline-block;
     width: 30%;
     max-width: 25rem;
-    vertical-align: top;
+  }
+
+  /*assignment => add .key-feature_list => flex container*/
+  .key-feature__list {
+    display: flex;
+    justify-content: center;
   }
 }
 
