--- a/shared.css
+++ b/shared.css
@@ -1,13 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Anonymous+Pro:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Roboto:100,400,900');
+@import url('https://fonts.googleapis.com/css?family=Anton');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,700');
 
 * {
   box-sizing: border-box;
 }
 
+html {
+  width: 100%;
+}
+
 body {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   margin: 0;
+  width: 100%;
 }
 
 main {
@@ -36,14 +42,8 @@ main {
   z-index: 1;
   display: flex;
   align-items: center;
-  justify-content: center;
-
+  justify-content: space-between;
 }
-/* 
-.main-header > div {
-  display: inline-block;
-  vertical-align: middle;
-} */
 
 .toggle-button {
   width: 3rem;
@@ -71,14 +71,12 @@ main {
   color: #0e4f1f;
   text-decoration: none;
   font-weight: bold;
-  height: 2.5rem;
   /* width: 20px; */
-  display: inline-block;
-  vertical-align: middle;
 }
 
 .main-header__brand img {
-  height: 100%;
+  height: 2.5rem;
+  vertical-align: middle;
   /* width: 100%; */
 }
 
@@ -90,10 +88,10 @@ main {
   margin: 0;
   padding: 0;
   list-style: none;
+  display: flex;
 }
 
 .main-nav__item {
-  display: inline-block;
   margin: 0 1rem;
 }
 
@@ -129,15 +127,12 @@ main {
 }
 
 @media (min-width: 40rem) {
-  .main-nav {
-    display: inline-block;
-    text-align: right;
-    width: calc(100% - 44px);
-    vertical-align: middle;
-  }
-
   .toggle-button {
     display: none;
+  }
+
+  .main-nav {
+    display: flex;
   }
 }
 
@@ -151,11 +146,13 @@ main {
   list-style: none;
   margin: 0;
   padding: 0;
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .main-footer__link {
-  margin: 1rem 0;
+  margin: 0.5rem 0;
 }
 
 .main-footer__link a {
@@ -166,13 +163,6 @@ main {
 .main-footer__link a:hover,
 .main-footer__link a:active {
   color: #ccc;
-}
-
-@media (min-width: 40rem) {
-  .main-footer__link {
-    display: inline-block;
-    margin: 0 1rem;
-  }
 }
 
 .mobile-nav {
@@ -190,9 +180,12 @@ main {
   width: 90%;
   height: 100%;
   list-style: none;
-  margin: 10% auto;
+  margin: 0 auto;
   padding: 0;
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .mobile-nav__item {
@@ -224,13 +217,24 @@ main {
   outline: none;
 }
 
-button[disabled] {
+.button[disabled] {
   cursor: not-allowed;
   border: #a1a1a1;
   background: #ccc;
   color: #a1a1a1;
-}
+} 
 
 .open {
-  display: block !important;
+    display: block !important;
+}
+
+@media (min-width: 40rem) {
+  .main-footer__link {
+    margin: 0 1rem;
+  }
+
+  .main-footer__links {
+    flex-direction: row;
+    justify-content: center;
+  }
 }
