--- a/shared.css
+++ b/shared.css
@@ -8,17 +8,24 @@
 
 html {
   width: 100%;
+  height: 100%;
 }
 
 body {
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   margin: 0;
   width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-rows: 3.5rem auto fit-content(8rem);
+  grid-template-areas:
+    'header'
+    'main'
+    'footer';
 }
 
 main {
-  min-height: calc(100vh - 3.5rem - 8rem);
-  margin-top: 3.5rem;
+  grid-area: main;
 }
 
 .backdrop {
@@ -140,6 +147,7 @@ main {
   background: black;
   padding: 2rem;
   margin-top: 3rem;
+  grid-area: footer;
 }
 
 .main-footer__links {
@@ -222,10 +230,10 @@ main {
   border: #a1a1a1;
   background: #ccc;
   color: #a1a1a1;
-} 
+}
 
 .open {
-    display: block !important;
+  display: block !important;
 }
 
 @media (min-width: 40rem) {
